added slider control to determine number of buttons to be generated at input and an alert message to speed things up, will be updated, planning to style with Bootstrap in the near future

--- a/style.css
+++ b/style.css
@@ -7,3 +7,17 @@ h3 {
 	justify-content: center;
 	align-items: center;
 }
+
+.btn {
+	width: 3vw;
+	height: 4vh;
+	margin: 4px;
+}
+
+.btn2 {
+	width: 4vw;
+}
+
+.play_again {
+	border-style: none;
+}
